--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
+    "dotenv": "^17.0.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "pg": "^8.11.3",
